tdf#118465 RTF: import repeated headers of tables

Change-Id: Idc0cd36e1ca55a0c0cc60faf455919af645bb747
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181792
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit 44d1dd3a252cb79629037110c75058925efdeb80)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181839
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: allotropia jenkins <jenkins@allotropia.de>